spacing fix

--- a/assets/css/view-2.css
+++ b/assets/css/view-2.css
@@ -134,7 +134,6 @@ button:focus, button:active {
   justify-content: center;
   display:flex;
   padding:10px;
-  width:50%;
   margin-top: 12px;
 }
 
@@ -154,7 +153,6 @@ button:focus, button:active {
   justify-content: center;
   display:flex;
   padding:10px;
-  width:50%;
   margin-top: 12px;
 }
 
